// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`authenticator-piv-cac-verification renders form with custom PIV/CAC Button label and class 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="MuiBox-root emotion-2"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <div
            class="okta-sign-in-header auth-header MuiBox-root emotion-4"
          >
            <h1
              class="MuiTypography-root MuiTypography-h1 emotion-5"
            />
          </div>
          <div
            class="MuiBox-root emotion-6"
          >
            <form
              class="o-form MuiBox-root emotion-7"
              data-se="o-form"
              novalidate=""
            >
              <div
                class="MuiBox-root emotion-8"
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h4 emotion-11"
                      data-se="o-form-head"
                      id="identify_Title_Sign_In_aut2h3ffszv3me6O31d7_1"
                      tabindex="-1"
                    >
                      Sign In
                    </h2>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-9"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-secondary MuiButton-secondaryPrimary MuiButton-sizeMedium MuiButton-secondarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-secondary MuiButton-secondaryPrimary MuiButton-sizeMedium MuiButton-secondarySizeMedium MuiButton-disableElevation MuiButton-fullWidth custom-piv-class piv-button emotion-13"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-startIcon MuiButton-iconSizeMedium emotion-14"
                    >
                      <img
                        alt="PIV Card"
                        aria-hidden="true"
                        class="MuiBox-root emotion-1"
                        src="MockSVGIcon"
                      />
                    </span>
                    My custom PIV Button Label
                  </button>
                </div>
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiDivider-root MuiDivider-fullWidth MuiDivider-withChildren separation-line emotion-17"
                    role="separator"
                  >
                    <span
                      class="MuiDivider-wrapper emotion-18"
                    >
                      OR
                    </span>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiBox-root emotion-1"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-21"
                      data-shrink="false"
                      for="identifier"
                    >
                      Username
                    </label>
                    <div
                      class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-22"
                      dir="ltr"
                      required="true"
                    >
                      <input
                        aria-invalid="false"
                        autocomplete="username"
                        class="MuiInputBase-input emotion-23"
                        data-se="identifier"
                        id="identifier"
                        name="identifier"
                        required=""
                        type="text"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiBox-root emotion-1"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-21"
                      data-shrink="false"
                      for="credentials.passcode"
                    >
                      Password
                    </label>
                    <div
                      class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-adornedEnd emotion-22"
                      dir="ltr"
                      required="true"
                    >
                      <input
                        aria-invalid="false"
                        autocomplete="current-password"
                        class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-23"
                        data-se="credentials.passcode"
                        id="credentials.passcode"
                        name="credentials.passcode"
                        required=""
                        type="password"
                      />
                      <div
                        class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined emotion-29"
                      >
                        <button
                          aria-controls="credentials.passcode"
                          aria-label="Show password"
                          aria-pressed="false"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium emotion-30"
                          data-mui-internal-clone-element="true"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-31"
                            fill="none"
                            focusable="false"
                            viewBox="0 0 16 16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M3.89765 11.5506C2.89626 10.6994 2.04176 9.50056 1.15617 8C2.04176 6.49944 2.89626 5.30062 3.89765 4.44944C4.96916 3.53865 6.24031 3 8 3C9.75969 3 11.0308 3.53865 12.1024 4.44944C13.1037 5.30062 13.9582 6.49944 14.8438 8C13.9582 9.50056 13.1037 10.6994 12.1024 11.5506C11.0308 12.4613 9.75969 13 8 13C6.24031 13 4.96916 12.4613 3.89765 11.5506ZM8 14C12 14 14 11.5 16 8C14 4.5 12 2 8 2C4 2 2 4.5 0 8C2 11.5 4 14 8 14ZM11 8C11 9.65685 9.65685 11 8 11C6.34315 11 5 9.65685 5 8C5 6.34315 6.34315 5 8 5C9.65685 5 11 6.34315 11 8ZM12 8C12 10.2091 10.2091 12 8 12C5.79086 12 4 10.2091 4 8C4 5.79086 5.79086 4 8 4C10.2091 4 12 5.79086 12 8Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-9"
                >
                  <fieldset
                    class="MuiFormControl-root MuiFormControl-marginNormal emotion-33"
                  >
                    <label
                      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-34"
                    >
                      <span
                        class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-root MuiCheckbox-colorPrimary emotion-35"
                      >
                        <input
                          class="PrivateSwitchBase-input emotion-36"
                          data-indeterminate="false"
                          data-se="rememberMe"
                          data-se-for-name="rememberMe"
                          id="rememberMe"
                          name="rememberMe"
                          type="checkbox"
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-37"
                          data-testid="CheckBoxOutlineBlankIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-38"
                      >
                        Keep me signed in
                      </span>
                    </label>
                  </fieldset>
                </div>
                <div
                  class="MuiBox-root emotion-9"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-40"
                    data-type="save"
                    tabindex="0"
                    type="submit"
                  >
                    Sign in
                  </button>
                </div>
                <div
                  class="MuiBox-root emotion-9"
                >
                  <button
                    class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-42"
                    data-se="forgot-password"
                    role="link"
                  >
                    Forgot password?
                  </button>
                </div>
                <div
                  class="MuiBox-root emotion-9"
                >
                  <button
                    class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-42"
                    data-se="unlock"
                    role="link"
                  >
                    Unlock account?
                  </button>
                </div>
                <div
                  class="MuiBox-root emotion-9"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-46"
                    data-se="help"
                    href="http://localhost:3000/help/login"
                  >
                    Help
                  </a>
                </div>
                <div
                  class="MuiBox-root emotion-9"
                >
                  <hr
                    class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-48"
                  />
                </div>
                <div
                  class="MuiBox-root emotion-49"
                >
                  <div
                    class="MuiBox-root emotion-9"
                  >
                    <div
                      class="MuiBox-root emotion-10"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-52"
                        data-se="signup-info"
                        id="identify_Description_Dont_have_an_account_aut2h3ffszv3me6O31d7_13"
                      >
                        Don't have an account?
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-9"
                  >
                    <button
                      class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-42"
                      data-se="enroll"
                      role="link"
                    >
                      Sign up
                    </button>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`authenticator-piv-cac-verification renders form with idpDisplay as PRIMARY/default 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="MuiBox-root emotion-2"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <div
            class="okta-sign-in-header auth-header MuiBox-root emotion-4"
          >
            <h1
              class="MuiTypography-root MuiTypography-h1 emotion-5"
            />
          </div>
          <div
            class="MuiBox-root emotion-6"
          >
            <form
              class="o-form MuiBox-root emotion-7"
              data-se="o-form"
              novalidate=""
            >
              <div
                class="MuiBox-root emotion-8"
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h4 emotion-11"
                      data-se="o-form-head"
                      id="identify_Title_Sign_In_aut2h3ffszv3me6O31d7_1"
                      tabindex="-1"
                    >
                      Sign In
                    </h2>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-9"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-secondary MuiButton-secondaryPrimary MuiButton-sizeMedium MuiButton-secondarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-secondary MuiButton-secondaryPrimary MuiButton-sizeMedium MuiButton-secondarySizeMedium MuiButton-disableElevation MuiButton-fullWidth  piv-button emotion-13"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-startIcon MuiButton-iconSizeMedium emotion-14"
                    >
                      <img
                        alt="PIV Card"
                        aria-hidden="true"
                        class="MuiBox-root emotion-1"
                        src="MockSVGIcon"
                      />
                    </span>
                    Sign in with PIV / CAC card
                  </button>
                </div>
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiDivider-root MuiDivider-fullWidth MuiDivider-withChildren separation-line emotion-17"
                    role="separator"
                  >
                    <span
                      class="MuiDivider-wrapper emotion-18"
                    >
                      OR
                    </span>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiBox-root emotion-1"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-21"
                      data-shrink="false"
                      for="identifier"
                    >
                      Username
                    </label>
                    <div
                      class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-22"
                      dir="ltr"
                      required="true"
                    >
                      <input
                        aria-invalid="false"
                        autocomplete="username"
                        class="MuiInputBase-input emotion-23"
                        data-se="identifier"
                        id="identifier"
                        name="identifier"
                        required=""
                        type="text"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiBox-root emotion-1"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-21"
                      data-shrink="false"
                      for="credentials.passcode"
                    >
                      Password
                    </label>
                    <div
                      class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-adornedEnd emotion-22"
                      dir="ltr"
                      required="true"
                    >
                      <input
                        aria-invalid="false"
                        autocomplete="current-password"
                        class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-23"
                        data-se="credentials.passcode"
                        id="credentials.passcode"
                        name="credentials.passcode"
                        required=""
                        type="password"
                      />
                      <div
                        class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined emotion-29"
                      >
                        <button
                          aria-controls="credentials.passcode"
                          aria-label="Show password"
                          aria-pressed="false"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium emotion-30"
                          data-mui-internal-clone-element="true"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-31"
                            fill="none"
                            focusable="false"
                            viewBox="0 0 16 16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M3.89765 11.5506C2.89626 10.6994 2.04176 9.50056 1.15617 8C2.04176 6.49944 2.89626 5.30062 3.89765 4.44944C4.96916 3.53865 6.24031 3 8 3C9.75969 3 11.0308 3.53865 12.1024 4.44944C13.1037 5.30062 13.9582 6.49944 14.8438 8C13.9582 9.50056 13.1037 10.6994 12.1024 11.5506C11.0308 12.4613 9.75969 13 8 13C6.24031 13 4.96916 12.4613 3.89765 11.5506ZM8 14C12 14 14 11.5 16 8C14 4.5 12 2 8 2C4 2 2 4.5 0 8C2 11.5 4 14 8 14ZM11 8C11 9.65685 9.65685 11 8 11C6.34315 11 5 9.65685 5 8C5 6.34315 6.34315 5 8 5C9.65685 5 11 6.34315 11 8ZM12 8C12 10.2091 10.2091 12 8 12C5.79086 12 4 10.2091 4 8C4 5.79086 5.79086 4 8 4C10.2091 4 12 5.79086 12 8Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-9"
                >
                  <fieldset
                    class="MuiFormControl-root MuiFormControl-marginNormal emotion-33"
                  >
                    <label
                      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-34"
                    >
                      <span
                        class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-root MuiCheckbox-colorPrimary emotion-35"
                      >
                        <input
                          class="PrivateSwitchBase-input emotion-36"
                          data-indeterminate="false"
                          data-se="rememberMe"
                          data-se-for-name="rememberMe"
                          id="rememberMe"
                          name="rememberMe"
                          type="checkbox"
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-37"
                          data-testid="CheckBoxOutlineBlankIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-38"
                      >
                        Keep me signed in
                      </span>
                    </label>
                  </fieldset>
                </div>
                <div
                  class="MuiBox-root emotion-9"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-40"
                    data-type="save"
                    tabindex="0"
                    type="submit"
                  >
                    Sign in
                  </button>
                </div>
                <div
                  class="MuiBox-root emotion-9"
                >
                  <button
                    class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-42"
                    data-se="forgot-password"
                    role="link"
                  >
                    Forgot password?
                  </button>
                </div>
                <div
                  class="MuiBox-root emotion-9"
                >
                  <button
                    class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-42"
                    data-se="unlock"
                    role="link"
                  >
                    Unlock account?
                  </button>
                </div>
                <div
                  class="MuiBox-root emotion-9"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-46"
                    data-se="help"
                    href="http://localhost:3000/help/login"
                  >
                    Help
                  </a>
                </div>
                <div
                  class="MuiBox-root emotion-9"
                >
                  <hr
                    class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-48"
                  />
                </div>
                <div
                  class="MuiBox-root emotion-49"
                >
                  <div
                    class="MuiBox-root emotion-9"
                  >
                    <div
                      class="MuiBox-root emotion-10"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-52"
                        data-se="signup-info"
                        id="identify_Description_Dont_have_an_account_aut2h3ffszv3me6O31d7_13"
                      >
                        Don't have an account?
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-9"
                  >
                    <button
                      class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-42"
                      data-se="enroll"
                      role="link"
                    >
                      Sign up
                    </button>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`authenticator-piv-cac-verification renders form with idpDisplay as SECONDARY 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="MuiBox-root emotion-2"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <div
            class="okta-sign-in-header auth-header MuiBox-root emotion-4"
          >
            <h1
              class="MuiTypography-root MuiTypography-h1 emotion-5"
            />
          </div>
          <div
            class="MuiBox-root emotion-6"
          >
            <form
              class="o-form MuiBox-root emotion-7"
              data-se="o-form"
              novalidate=""
            >
              <div
                class="MuiBox-root emotion-8"
              >
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h4 emotion-11"
                      data-se="o-form-head"
                      id="identify_Title_Sign_In_aut2h3ffszv3me6O31d7_1"
                      tabindex="-1"
                    >
                      Sign In
                    </h2>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiBox-root emotion-1"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-14"
                      data-shrink="false"
                      for="identifier"
                    >
                      Username
                    </label>
                    <div
                      class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth emotion-15"
                      dir="ltr"
                      required="true"
                    >
                      <input
                        aria-invalid="false"
                        autocomplete="username"
                        class="MuiInputBase-input emotion-16"
                        data-se="identifier"
                        id="identifier"
                        name="identifier"
                        required=""
                        type="text"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiBox-root emotion-1"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiFormLabel-colorPrimary MuiInputLabel-root emotion-14"
                      data-shrink="false"
                      for="credentials.passcode"
                    >
                      Password
                    </label>
                    <div
                      class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-adornedEnd emotion-15"
                      dir="ltr"
                      required="true"
                    >
                      <input
                        aria-invalid="false"
                        autocomplete="current-password"
                        class="MuiInputBase-input MuiInputBase-inputAdornedEnd emotion-16"
                        data-se="credentials.passcode"
                        id="credentials.passcode"
                        name="credentials.passcode"
                        required=""
                        type="password"
                      />
                      <div
                        class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined emotion-22"
                      >
                        <button
                          aria-controls="credentials.passcode"
                          aria-label="Show password"
                          aria-pressed="false"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium emotion-23"
                          data-mui-internal-clone-element="true"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-24"
                            fill="none"
                            focusable="false"
                            viewBox="0 0 16 16"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M3.89765 11.5506C2.89626 10.6994 2.04176 9.50056 1.15617 8C2.04176 6.49944 2.89626 5.30062 3.89765 4.44944C4.96916 3.53865 6.24031 3 8 3C9.75969 3 11.0308 3.53865 12.1024 4.44944C13.1037 5.30062 13.9582 6.49944 14.8438 8C13.9582 9.50056 13.1037 10.6994 12.1024 11.5506C11.0308 12.4613 9.75969 13 8 13C6.24031 13 4.96916 12.4613 3.89765 11.5506ZM8 14C12 14 14 11.5 16 8C14 4.5 12 2 8 2C4 2 2 4.5 0 8C2 11.5 4 14 8 14ZM11 8C11 9.65685 9.65685 11 8 11C6.34315 11 5 9.65685 5 8C5 6.34315 6.34315 5 8 5C9.65685 5 11 6.34315 11 8ZM12 8C12 10.2091 10.2091 12 8 12C5.79086 12 4 10.2091 4 8C4 5.79086 5.79086 4 8 4C10.2091 4 12 5.79086 12 8Z"
                              fill="currentColor"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-9"
                >
                  <fieldset
                    class="MuiFormControl-root MuiFormControl-marginNormal emotion-26"
                  >
                    <label
                      class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd emotion-27"
                    >
                      <span
                        class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-root MuiCheckbox-colorPrimary emotion-28"
                      >
                        <input
                          class="PrivateSwitchBase-input emotion-29"
                          data-indeterminate="false"
                          data-se="rememberMe"
                          data-se-for-name="rememberMe"
                          id="rememberMe"
                          name="rememberMe"
                          type="checkbox"
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-30"
                          data-testid="CheckBoxOutlineBlankIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label emotion-31"
                      >
                        Keep me signed in
                      </span>
                    </label>
                  </fieldset>
                </div>
                <div
                  class="MuiBox-root emotion-9"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-disableElevation MuiButton-fullWidth emotion-33"
                    data-type="save"
                    tabindex="0"
                    type="submit"
                  >
                    Sign in
                  </button>
                </div>
                <div
                  class="MuiBox-root emotion-9"
                >
                  <div
                    class="MuiDivider-root MuiDivider-fullWidth MuiDivider-withChildren separation-line emotion-35"
                    role="separator"
                  >
                    <span
                      class="MuiDivider-wrapper emotion-36"
                    >
                      OR
                    </span>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-9"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-secondary MuiButton-secondaryPrimary MuiButton-sizeMedium MuiButton-secondarySizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-secondary MuiButton-secondaryPrimary MuiButton-sizeMedium MuiButton-secondarySizeMedium MuiButton-disableElevation MuiButton-fullWidth  piv-button emotion-38"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-startIcon MuiButton-iconSizeMedium emotion-39"
                    >
                      <img
                        alt="PIV Card"
                        aria-hidden="true"
                        class="MuiBox-root emotion-1"
                        src="MockSVGIcon"
                      />
                    </span>
                    Sign in with PIV / CAC card
                  </button>
                </div>
                <div
                  class="MuiBox-root emotion-9"
                >
                  <button
                    class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-42"
                    data-se="forgot-password"
                    role="link"
                  >
                    Forgot password?
                  </button>
                </div>
                <div
                  class="MuiBox-root emotion-9"
                >
                  <button
                    class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-42"
                    data-se="unlock"
                    role="link"
                  >
                    Unlock account?
                  </button>
                </div>
                <div
                  class="MuiBox-root emotion-9"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways emotion-46"
                    data-se="help"
                    href="http://localhost:3000/help/login"
                  >
                    Help
                  </a>
                </div>
                <div
                  class="MuiBox-root emotion-9"
                >
                  <hr
                    class="MuiDivider-root MuiDivider-fullWidth separation-line emotion-48"
                  />
                </div>
                <div
                  class="MuiBox-root emotion-49"
                >
                  <div
                    class="MuiBox-root emotion-9"
                  >
                    <div
                      class="MuiBox-root emotion-10"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-52"
                        data-se="signup-info"
                        id="identify_Description_Dont_have_an_account_aut2h3ffszv3me6O31d7_13"
                      >
                        Don't have an account?
                      </p>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-9"
                  >
                    <button
                      class="MuiTypography-root MuiTypography-body1 MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-42"
                      data-se="enroll"
                      role="link"
                    >
                      Sign up
                    </button>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
    </main>
  </div>
</div>
`;

exports[`authenticator-piv-cac-verification should render PIV/CAC view when clicking PIV button 1`] = `
<div>
  <div
    class="MuiScopedCssBaseline-root emotion-0"
  >
    <main
      class="auth-container main-container MuiBox-root emotion-1"
      data-commit="b9bbc0140703c3fbf0e2e58920362e70"
      data-version="0.0.0"
      dir="ltr"
      id="okta-sign-in"
      lang="en"
    >
      <div
        class="MuiBox-root emotion-2"
      >
        <div
          class="MuiBox-root emotion-3"
        >
          <div
            class="okta-sign-in-header auth-header authCoinSpacing MuiBox-root emotion-4"
          >
            <h1
              class="MuiTypography-root MuiTypography-h1 emotion-5"
            />
            <div
              aria-hidden="true"
              class="smart-card-icon MuiBox-root emotion-6"
              data-se="factor-beacon"
            >
              <svg
                aria-labelledby="smart-card-icon"
                fill="none"
                height="48"
                role="img"
                viewBox="0 0 48 48"
                width="48"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title
                  id="smart-card-icon"
                >
                  PIV Card
                </title>
                <circle
                  class="siwFillBg"
                  cx="24"
                  cy="24"
                  fill="#F5F5F6"
                  r="24"
                />
                <path
                  class="siwFillPrimaryDark"
                  clip-rule="evenodd"
                  d="M17.5 37h13a2.6 2.6 0 0 0 2.5-2.682V14.682A2.6 2.6 0 0 0 30.5 12h-13a2.6 2.6 0 0 0-2.5 2.682v19.636A2.6 2.6 0 0 0 17.5 37Zm-1.096-23.468A1.6 1.6 0 0 1 17.5 13h13a1.6 1.6 0 0 1 1.5 1.682v19.636A1.6 1.6 0 0 1 30.5 36h-13a1.6 1.6 0 0 1-1.5-1.682V14.682a1.6 1.6 0 0 1 .404-1.15ZM23 28h-1v1h1v-1Zm-3 0h1v1h-1v-1Zm0 5v-3h3v1h-2v2h-1Zm2-1h1v1h-1v-1Zm-2-5a1 1 0 0 0-1 1v5a1 1 0 0 0 1 1h3a1 1 0 0 0 1-1v-5a1 1 0 0 0-1-1h-3Z"
                  fill="#00297A"
                  fill-rule="evenodd"
                />
                <path
                  class="siwFillSecondary"
                  clip-rule="evenodd"
                  d="M28 17h-4v1h4v-1Zm2 2h-6v1h6v-1Zm-6 2h6v1h-6v-1Z"
                  fill="#A7B5EC"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
          <div
            class="MuiBox-root emotion-7"
          >
            <form
              class="o-form MuiBox-root emotion-8"
              data-se="o-form"
              novalidate=""
            >
              <div
                class="MuiBox-root emotion-9"
              >
                <div
                  class="MuiBox-root emotion-10"
                >
                  <div
                    class="MuiBox-root emotion-11"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h4 emotion-12"
                      data-se="o-form-head"
                      id="piv-idp_Title_PIV_/_CAC_card_aut2h3ffszv3me6O31d7_1"
                      tabindex="-1"
                    >
                      PIV / CAC card
                    </h2>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-10"
                >
                  <div
                    class="MuiBox-root emotion-11"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph emotion-15"
                      data-se="o-form-explain"
                      id="piv-idp_Description_Please_insert_your_PIV_/_CAC_card_and_select_the_user_certificate_aut2h3ffszv3me6O31d7_2"
                    >
                      Please insert your PIV / CAC card and select the user certificate.
                    </p>
                  </div>
                </div>
                <div
                  class="MuiBox-root emotion-10"
                >
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <span
                        aria-label="Processing..."
                        aria-valuetext="Processing..."
                        class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary emotion-19"
                        data-se="okta-spinner"
                        id="okta-spinner"
                        role="progressbar"
                        style="width: 1.14285714rem; height: 1.14285714rem;"
                      >
                        <svg
                          class="MuiCircularProgress-svg emotion-20"
                          viewBox="22 22 44 44"
                        >
                          <circle
                            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate emotion-21"
                            cx="44"
                            cy="44"
                            fill="none"
                            r="18"
                            stroke-width="8"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
      <form
        action="http://localhost:3000/sso/idps/MTLS"
        method="get"
        style="display: none;"
      >
        <input
          name="stateTokenExternalId"
          type="hidden"
          value="ZnNzQnZsc0RwK3RuSnVEUTJNYTZIdXc5bzl6UnI4NzBPazloT0lIMy9wd3hSVGlDMDRjRDQ2V2VqeHJuSGcyNQ"
        />
        <input
          type="submit"
        />
      </form>
    </main>
  </div>
</div>
`;
